--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic2-tour-of-heroes",
+  "name": "ionic-tour-of-heroes",
   "app_id": "",
   "type": "ionic-angular",
   "integrations": {
